--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -24,6 +24,8 @@ jobs:
             platform: mac
           - os: windows-latest
             platform: win
+          - os: ubuntu-latest
+            platform: linux
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -68,6 +70,21 @@ jobs:
           node node_modules/ffmpeg-static/install.js
           node node_modules/vosk-koffi/scripts/postinstall.js
 
+      # --- Linux setup ---
+      - name: Install system dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: sudo ./scripts/install-linux-deps.sh
+
+      - name: Install dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: npm ci --ignore-scripts && npx patch-package && npm run rebuild-pty
+
+      - name: Install native dependency binaries (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          node node_modules/ffmpeg-static/install.js
+          node node_modules/vosk-koffi/scripts/postinstall.js
+
       # --- Build & package (no signing) ---
       - name: Run tests
         run: npm test
@@ -86,6 +103,10 @@ jobs:
         if: runner.os == 'Windows'
         run: npx electron-builder --win --publish never
 
+      - name: Package distributables (Linux)
+        if: runner.os == 'Linux'
+        run: npx electron-builder --linux --publish never
+
       # --- Upload artifacts for reviewers to test ---
       - name: Upload DMG (macOS)
         if: runner.os == 'macOS'
@@ -103,6 +124,63 @@ jobs:
           name: Cooper-Setup
           path: release/*-Setup.exe
           if-no-files-found: error
+          retention-days: 3
+
+      - name: Upload AppImage (Linux)
+        if: runner.os == 'Linux'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-AppImage
+          path: release/*.AppImage
+          if-no-files-found: error
+          retention-days: 3
+
+      - name: Upload deb (Linux)
+        if: runner.os == 'Linux'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-deb
+          path: release/*.deb
+          if-no-files-found: error
+          retention-days: 3
+
+  # Fedora build to verify non-Debian distro compatibility
+  build-fedora:
+    runs-on: ubuntu-latest
+    container:
+      image: fedora:latest
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install system dependencies (Fedora)
+        run: |
+          dnf install -y nodejs npm git
+          ./scripts/install-linux-deps-fedora.sh
+
+      - name: Install dependencies
+        run: npm ci --ignore-scripts && npx patch-package && npm run rebuild-pty
+
+      - name: Install native dependency binaries
+        run: |
+          node node_modules/ffmpeg-static/install.js
+          node node_modules/vosk-koffi/scripts/postinstall.js
+
+      - name: Run tests
+        run: npm test
+
+      - name: Build application
+        run: npm run prebuild-info && npx electron-vite build
+
+      - name: Package distributables (Fedora)
+        run: npx electron-builder --linux --publish never
+
+      - name: Upload RPM (Fedora)
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-rpm-fedora
+          path: release/*.rpm
+          if-no-files-found: warn
           retention-days: 3
 
 
