--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clean": "node -e \"const fs=require('fs');['out','release'].forEach(d=>{try{fs.rmSync(d,{recursive:true,force:true})}catch{}})\"",
     "dist": "npm run test && npm run clean && npm run prebuild-info && electron-vite build && electron-builder --mac",
     "dist:win": "npm run test && npm run clean && npm run prebuild-info && electron-vite build && electron-builder --win",
+    "dist:linux": "npm run test && npm run clean && npm run prebuild-info && electron-vite build && electron-builder --linux",
     "prepare": "husky",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
@@ -99,6 +100,31 @@
       "allowToChangeInstallationDirectory": true,
       "artifactName": "${productName}-${version}-win-${arch}-Setup.${ext}",
       "installerHeader": "build/icon.ico"
+    },
+    "linux": {
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "deb",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "rpm",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "category": "Development",
+      "icon": "build/icon.png",
+      "artifactName": "${productName}-${version}-linux-${arch}.${ext}"
     }
   },
   "dependencies": {
