--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -145,6 +145,7 @@ jobs:
           retention-days: 3
 
   # Fedora build to verify non-Debian distro compatibility
+  # Only builds AppImage to test compatibility - rpm would require libcrypt compat library
   build-fedora:
     runs-on: ubuntu-latest
     container:
@@ -172,15 +173,15 @@ jobs:
       - name: Build application
         run: npm run prebuild-info && npx electron-vite build
 
-      - name: Package distributables (Fedora)
-        run: npx electron-builder --linux --publish never
+      - name: Package AppImage (Fedora)
+        run: npx electron-builder --linux AppImage --publish never
 
-      - name: Upload RPM (Fedora)
+      - name: Upload AppImage (Fedora)
         uses: actions/upload-artifact@v4
         with:
-          name: Cooper-rpm-fedora
-          path: release/*.rpm
-          if-no-files-found: warn
+          name: Cooper-AppImage-fedora
+          path: release/*.AppImage
+          if-no-files-found: error
           retention-days: 3
 
 
