chore(release): promote 1.0.2 to main (#436)
* feat: isolate dev sessions via XDG_STATE_HOME

- Add scripts/dev-env.js that sets XDG_STATE_HOME to ~/.copilot-dev
- Update npm run dev/start to use the new script
- SDK natively respects XDG_STATE_HOME, so dev sessions are isolated
- Zero dev-detection code in the app itself

Closes #286

* fix: respect XDG_STATE_HOME in Cooper's session-state paths

* feat: full XDG support and COPILOT_SESSIONS_HOME

- Add getCopilotConfigPath() that respects XDG_CONFIG_HOME
- Add getCopilotStatePath() that respects XDG_STATE_HOME
- Add getWorktreeSessionsPath() that respects COPILOT_SESSIONS_HOME
- Update all hardcoded .copilot paths to use these helpers
- Update instructions.ts, skills.ts, agents.ts to respect XDG_CONFIG_HOME
- npm run dev now also sets COPILOT_SESSIONS_HOME for worktree isolation

* refactor: remove getSessionStatePath helper, inline usage

* refactor: change default worktree path from ~/.copilot-sessions to ~/.cooper-sessions

* chore: set all three env vars in dev script

* fix: clear XDG env vars in tests to use mocked home path

* fix: isolate electron-store in dev mode to prevent overwriting production settings

* fix: add missing parseAgentFrontmatter import

* revert: change worktree path back to ~/.copilot-sessions

* fix: handle array paths in MCP tool display

MCP tools can pass path as an array (e.g., ['documentation/schedule.md'])
which caused path.split is not a function crash in ToolActivitySection.

Now converts arrays to comma-separated strings before calling .split().

* Fix: Keypress latency ~185ms in large sessions (#271) (#399)

* Fix: Keypress latency ~185ms in large sessions (#271)

- Extract MessageItem component with React.memo for message rendering
- Extract ChatInput component with isolated state for input handling
- Optimize message list rendering with useMemo
- Fix attachment regression (restore saveImageToTemp/saveFileToTemp calls)
- Add handleImageClick handler for image interactions



--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -24,6 +24,8 @@ jobs:
             platform: mac
           - os: windows-latest
             platform: win
+          - os: ubuntu-latest
+            platform: linux
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -68,6 +70,21 @@ jobs:
           node node_modules/ffmpeg-static/install.js
           node node_modules/vosk-koffi/scripts/postinstall.js
 
+      # --- Linux setup ---
+      - name: Install system dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: sudo ./scripts/install-linux-deps.sh
+
+      - name: Install dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: npm ci --ignore-scripts && npx patch-package && npm run rebuild-pty
+
+      - name: Install native dependency binaries (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          node node_modules/ffmpeg-static/install.js
+          node node_modules/vosk-koffi/scripts/postinstall.js
+
       # --- Build & package (no signing) ---
       - name: Run tests
         run: npm test
@@ -85,6 +102,10 @@ jobs:
       - name: Package distributables (Windows, unsigned)
         if: runner.os == 'Windows'
         run: npx electron-builder --win --publish never
+
+      - name: Package distributables (Linux)
+        if: runner.os == 'Linux'
+        run: npx electron-builder --linux --publish never
 
       # --- Upload artifacts for reviewers to test ---
       - name: Upload DMG (macOS)
@@ -105,4 +126,60 @@ jobs:
           if-no-files-found: error
           retention-days: 3
 
+      - name: Upload AppImage (Linux)
+        if: runner.os == 'Linux'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-AppImage
+          path: release/*.AppImage
+          if-no-files-found: error
+          retention-days: 3
 
+      - name: Upload deb (Linux)
+        if: runner.os == 'Linux'
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-deb
+          path: release/*.deb
+          if-no-files-found: error
+          retention-days: 3
+
+  # Fedora build to verify non-Debian distro compatibility
+  # Only builds AppImage to test compatibility - rpm would require libcrypt compat library
+  build-fedora:
+    runs-on: ubuntu-latest
+    container:
+      image: fedora:latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install system dependencies (Fedora)
+        run: |
+          dnf install -y nodejs npm git python3 make gcc gcc-c++
+          ./scripts/install-linux-deps.sh
+
+      - name: Install dependencies
+        run: npm ci --ignore-scripts && npx patch-package && npm run rebuild-pty
+
+      - name: Install native dependency binaries
+        run: |
+          node node_modules/ffmpeg-static/install.js
+          node node_modules/vosk-koffi/scripts/postinstall.js
+
+      - name: Run tests
+        run: npm test
+
+      - name: Build application
+        run: npm run prebuild-info && npx electron-vite build
+
+      - name: Package AppImage (Fedora)
+        run: npx electron-builder --linux AppImage --publish never
+
+      - name: Upload AppImage (Fedora)
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cooper-AppImage-fedora
+          path: release/*.AppImage
+          if-no-files-found: error
+          retention-days: 3
