--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,15 @@ jobs:
             tag="v$version"
             echo "is_prerelease=false" >> $GITHUB_OUTPUT
           else
-            tag="v$version-rc.${{ github.run_number }}"
+            git fetch --tags --force
+            existing_rc_tags=$(git tag -l "v$version-rc.*")
+            if [ -z "$existing_rc_tags" ]; then
+              next_rc=1
+            else
+              max_rc=$(echo "$existing_rc_tags" | sed -E 's/.*-rc\.([0-9]+)$/\1/' | sort -n | tail -1)
+              next_rc=$((max_rc + 1))
+            fi
+            tag="v$version-rc.$next_rc"
             echo "is_prerelease=true" >> $GITHUB_OUTPUT
           fi
           echo "tag=$tag" >> $GITHUB_OUTPUT
