Revert CI test commands back to npm test

--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -70,7 +70,7 @@ jobs:
 
       # --- Build & package (no signing) ---
       - name: Run tests
-        run: npm run test:integration:mcp
+        run: npm test
 
       - name: Build application
         run: npm run prebuild-info && npx electron-vite build
