--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Run unit tests
         if: needs.changes.outputs.src == 'true'
-        run: npm run test:integration:mcp
+        run: npm test
 
       - name: Build application
         if: needs.changes.outputs.src == 'true'
