chore(build): unify dist script for cross-platform builds and update README

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rebuild-pty": "npx @electron/rebuild -f -w node-pty",
     "prebuild-info": "node scripts/build-info.js",
     "clean": "node -e \"const fs=require('fs');['out','release'].forEach(d=>{try{fs.rmSync(d,{recursive:true,force:true})}catch{}})\"",
-    "dist": "npm run test && npm run clean && npm run prebuild-info && electron-vite build && electron-builder --mac",
+    "dist": "npm install && node -e \"const platformScriptMap={darwin:'dist:mac',win32:'dist:win',linux:'dist:linux'};const script=platformScriptMap[process.platform];if(!script){throw new Error('Unsupported platform: '+process.platform)}require('child_process').execSync('npm run '+script,{stdio:'inherit'})\"",
+    "dist:mac": "npm run test && npm run clean && npm run prebuild-info && electron-vite build && electron-builder --mac",
     "dist:win": "npm run test && npm run clean && npm run prebuild-info && electron-vite build && electron-builder --win",
     "dist:linux": "npm run test && npm run clean && npm run prebuild-info && electron-vite build && electron-builder --linux",
     "prepare": "husky",
