chore(build): add node-pty to asarUnpack for electron packaging

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "asarUnpack": [
       "node_modules/@github/copilot-*/**/*",
       "node_modules/ffmpeg-static/**/*",
+      "node_modules/node-pty/**/*",
       "public/whisper-cpp/**/*",
       "public/whisper-model/**/*"
     ],
